--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <nav> <!-- De navigatiebar -->
     <div class="naastElkaar2">
         <div>
-            <img class="logo" src="images/logo.png" alt="Afbeelding-logo">
+            <img class="logo" src="Images/logo.png" alt="Images-logo">
         </div>
 
 
@@ -29,7 +29,7 @@
             <div class="navText">
                 <div class="naastElkaar2">
                     <div><img class="reserveringsicoon" src="images/reserveringsicoon.png"
-                              alt="Afbeelding-reserveringsicoon"></div>
+                              alt="Images-reserveringsicoon"></div>
                     <div> <a href="reservation.php">Reserveren</a></div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
 <!-- De vrolijke vee oppas -->
 <header>
     <div class="naastElkaarHeader">
-        <img class="afbeelding" src="images/2kinderen.jpeg" alt="Afbeelding-2kinderen">
+        <img class="afbeelding" src="Images/2kinderen.jpeg" alt="Afbeelding-2kinderen">
         <div class="onderElkaarHeader">
             <h1>De Vrolijke Vee Oppas</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -63,7 +63,7 @@
                 mollit
                 anim id est laborum.</p>
         </div>
-        <img class="afbeelding" src="images/geitjes.jpeg" alt="Afbeelding-geitjes">
+        <img class="afbeelding" src="Images/geitjes.jpeg" alt="Images-geitjes">
     </div>
 </header>
 
@@ -73,7 +73,7 @@
     </div>
 
     <div class="naastElkaarMain" id="inleiding">
-        <img class="afbeelding" src="images/geitmeid.jpg" alt="Afbeelding-geitmeid">
+        <img class="Images" src="Images/geitmeid.jpg" alt="Images-geitmeid">
         <div class="onderElkaarMain">
             <h3>
                 Maak kennis!
