--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- De vrolijke vee oppas -->
 <header>
     <div class="naastElkaarHeader">
-        <img class="afbeelding" src="Images/2kinderen.jpeg" alt="Afbeelding-2kinderen">
+        <img class="Images" src="Images/2kinderen.jpeg" alt="Afbeelding-2kinderen">
         <div class="onderElkaarHeader">
             <h1>De Vrolijke Vee Oppas</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -63,7 +63,7 @@
                 mollit
                 anim id est laborum.</p>
         </div>
-        <img class="afbeelding" src="Images/geitjes.jpeg" alt="Images-geitjes">
+        <img class="Images" src="Images/geitjes.jpeg" alt="Images-geitjes">
     </div>
 </header>
 
@@ -95,7 +95,7 @@
         <div class="onderElkaarMain2">
             <a href="http://localhost/eindopdrachtcle/register.php">
                 <p class="maakAfspraak"> Maak hier een <br> afspraak! </p>
-                <img class="Afbeelding-reserveringsicoonGeel"  src="images/reserveringsicoonGeel.png" alt="Afbeelding-reserveringsicoonGeel">
+                <img class="Images-reserveringsicoonGeel"  src="Images/reserveringsicoonGeel.png" alt="Images-reserveringsicoonGeel">
             </a>
         </div>
 
@@ -104,7 +104,7 @@
 
 <footer>
     <div class="naastElkaarFooter">
-        <img class="kleineAfbeelding" src="images/email.png" alt="Afbeelding-email">
+        <img class="kleineAfbeelding" src="Images/email.png" alt="Images-email">
         <p>Neem contact op met ons
             <br>
             vrolijkeveeoppas@gmail.com
