--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <nav> <!-- De navigatiebar -->
     <div class="naastElkaar2">
         <div>
-            <img class="logo" src="images/logo.png" alt="Afbeelding-logo">
+            <img class="logo" src="Images/logo.png" alt="Afbeelding-logo">
         </div>
 
 
@@ -63,7 +63,7 @@
                 mollit
                 anim id est laborum.</p>
         </div>
-        <img class="afbeelding" src="images/geitjes.jpeg" alt="Afbeelding-geitjes">
+        <img class="afbeelding" src="Images/geitjes.jpeg" alt="Afbeelding-geitjes">
     </div>
 </header>
 
@@ -73,7 +73,7 @@
     </div>
 
     <div class="naastElkaarMain" id="inleiding">
-        <img class="afbeelding" src="images/geitmeid.jpg" alt="Afbeelding-geitmeid">
+        <img class="afbeelding" src="Images/geitmeid.jpg" alt="Afbeelding-geitmeid">
         <div class="onderElkaarMain">
             <h3>
                 Maak kennis!
@@ -95,7 +95,7 @@
         <div class="onderElkaarMain2">
             <a href="http://localhost/eindopdrachtcle/register.php">
                 <p class="maakAfspraak"> Maak hier een <br> afspraak! </p>
-                <img class="Afbeelding-reserveringsicoonGeel"  src="images/reserveringsicoonGeel.png" alt="Afbeelding-reserveringsicoonGeel">
+                <img class="Afbeelding-reserveringsicoonGeel"  src="Images/reserveringsicoonGeel.png" alt="Afbeelding-reserveringsicoonGeel">
             </a>
         </div>
 
@@ -104,7 +104,7 @@
 
 <footer>
     <div class="naastElkaarFooter">
-        <img class="kleineAfbeelding" src="images/email.png" alt="Afbeelding-email">
+        <img class="kleineAfbeelding" src="Images/email.png" alt="Afbeelding-email">
         <p>Neem contact op met ons
             <br>
             vrolijkeveeoppas@gmail.com
