--- a/index.html
+++ b/index.html
@@ -51,17 +51,9 @@
         <img class="afbeelding" src="images/2kinderen.jpeg" alt="Afbeelding-2kinderen">
         <div class="onderElkaarHeader">
             <h1>De Vrolijke Vee Oppas</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip
-                ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.</p>
+            <p>Welkom bij De vrolijke vee oppas, de plek waar de avonturen van kinderen tot leven komen en de glimlach van een oppas een onuitwisbare indruk achterlaat.
+                Bij ons draait alles om het creëren van een vrolijke en stimulerende omgeving waar kinderen niet alleen worden opgevangen, maar ook worden aangemoedigd om te groeien, ontdekken en plezier te beleven.
+                </p>
         </div>
         <img class="afbeelding" src="Images/geitjes.jpeg" alt="Afbeelding-geitjes">
     </div>
@@ -79,17 +71,8 @@
                 Maak kennis!
             </h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip
-                ex
-                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.
+               Onze kinderoppassers zijn meer dan alleen zorgverleners;
+                ze zijn de architecten van kostbare herinneringen en de bewakers van een veilige en speelse ruimte. Ontdek op onze website hoe wij, met toewijding en een glimlach, een thuis weg van huis bieden voor uw kleintjes. 
             </p>
         </div>
         <div class="onderElkaarMain2">
